--- a/ssg-ssr.mdx
+++ b/ssg-ssr.mdx
@@ -31,7 +31,12 @@ You can use Static Generation for many types of pages, including:
 You should ask yourself: "Can I pre-render this page **ahead** of a user's request?" If the answer is yes, then you should choose Static Generation.
 
 <CustomImage
-  src='https://raw.githubusercontent.com/gitdagray/test-blogposts/main/images/ssg-benefits.PNG'
+  src='https://raw.githubusercontent.com/Watcher1986/test-api/main/images/SSG-1.png'
+  alt='ChatGPT provides the benefits of Static-Site Generation'
+/>
+
+<CustomImage
+  src='https://raw.githubusercontent.com/Watcher1986/test-api/main/images/SSG-2.png'
   alt='ChatGPT provides the benefits of Static-Site Generation'
 />
 
